--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ scipy = "^1.13.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.1"
 ruff = "^0.4.4"
+pytest-mock = "^3.14.0"
 
 [build-system]
 requires = ["poetry-core"]
